organization/ writing/ added draft modeling schematic
#41 , #33 , #42

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -19,6 +19,7 @@ fig_NEON_vertical =  2
 #fig_NEON_differences (issue #31)
 fig_leaf_T = 3
 fig_treerings= 4 #not sure if we want to include one
+fig_model=5
 
 #tables
 table_leaf_traits=1
@@ -130,9 +131,9 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (2) the leaf traits most strongly influence leaf temperature and metabolism;
 (4) foliar metabolism, including stomatal conductance, photosynthesis, respiration, and volatile organic compound (VOC) production; and 
 (5) size-structuring of whole-tree and ecosystem function.
-*We then consider the implications for scaling across space and time, and understanding forest responses to global change.* 
+*We then consider the implications for understanding forest responses to global change, including scaling across space and time.* 
 
-![**Figure `r fig_schematic`. DRAFT schematic of a forest summarizing most important gradients--sort of a "graphical abstract".** [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematic/vertical thermal sensitivity image.png)
+![**Figure `r fig_schematic`. DRAFT schematic of a forest summarizing most important gradients--sort of a "graphical abstract".** [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/vertical thermal sensitivity image.png)
 
 
 # Review of vertical gradients
@@ -528,32 +529,9 @@ Leaf-scale properties and processes aggregate non-linearly  in vertical and hori
 
 Still, partitioning $ET$ into its constituent components, let alone vertically partitioning transpiration rates in the canopy, remains a challenge. Eddy covariance techniques, sap flow measurements, and stable isotope analysis offer useful tools, although errors can be large (Williams et al 2004, Herbst et al. 1996). To date, empirical analyses of ET vertical partitioning and interactions with temperature and vegetation structure have be concentrated in midlatitude ecosystems (e.g. Haverd et al 2009, 2011, Staudt et al. 2011, Ringgaard et al. 2014) *(KAT: but see Kunert et al. 2017 -not sure if this is equivalent)*. With respect to changing temperatures, the net effect of leaf- and plant-level thermal responses remains an active area of research, including both how vertical variation in thermal sensitivity influences forest ecosystem dynamics and biosphere-atmosphere interactions. 
 
-
-
 # Implications
 
-## Scaling across space and time 
-
-*(In this section, we consider implications of the patterns reviewed above for our understanding of the future of forests--both how we model them and what sorts of responses we can expect under climate change.)*
-
-### Remote sensing 
-
-An increasing availability of airborne and spaceborne LiDAR remote sensing data offers a promising opportunity for mapping vertical thermal gradients and vegetation structure. [Drone based FLIR cams, tower thermal cams (Pau et al 2018), ECOSTRESS]. To evaluate large-scale ecosystem patterns, high resolution vertically resolved vegetation structure from LiDAR data can be analyzed in combination with collocated field measurements collected using towers (FluxNet REF), canopy cranes (@nakamuraForestsTheirCanopies2017), or by tree climbing (REF – e.g. Asner papers, Shenkin et al – Unding Jami’s work). Existing research efforts have already revealed incredibly heterogeneity in vegetation structure, diversity, traits, and properties both within and across ecosystems (REFS – Stovall, Schneider, …others).
-
-### Representing Vertical Gradients in Models
-
-Models representing ecosystem dynamics related to carbon, energy, and water fluxes operate at a range of scales and have varying degrees of complexity , and include offline models and models that can be fully coupled with Earth System Models (ESMs). Dynamic global vegetation models (DGVMs) comprise the land surface models in ESMs used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015). Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output. 
-
-In general, DGVMs range from Individual Based Models (IBMs) on one end of the complexity and scale spectrum to big-leaf models on the other end. Most climate models incorporate vegetation dynamics using big-leaf models, which include many first generation DGVMs that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer. This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan et al. 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt et al. 1998; Moorcroft et al., 2001; Smith et al. 2001; Stark et al., 2012). On the other end of the spectrum are IBMs, also referred to as forest gap models, representing vegetation at the level of individual plants (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato et al. 2007; Shuman et al. 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011). These models are often stochastic and spatially explicit, capturing spatial variability in the light environment and microclimates at high vertical and horizontal resolution. As a result, however, IBMs are computationally expensive and tend to be run at very local scales. 
-
-Cohort-based models (CBMs) sit in the middle of this continuum, between the oversimplified vegetation dynamics in big-leaf models and the computational expense of IBMs. CBMs represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type (Haverd et al., 2013; Hurtt et al., 1998; Lischke et al. 2006; Medvigy et al. 2009; Moorcroft et al., 2001; Scherstjanoi et al. 2014; Smith et al., 2014; Weng et al., 2015). Although this cohort approach serves as a compromise that incurs lower computational costs than IBMs while capturing many of the same dynamics, CBMs do not incorporate the stochastic processes of IBMs that typically allow for greater representation of functional diversity (Fisher et al., 2010). 
-
-To review the vertical light environment and thermodynamics of CBMs in more detail, we focus here on the Ecosystem Demography model version 2 (ED2), a model that is actively undergoing continued development and application across a range of ecosystems and landscapes (Moorcroft et al. 2001, Longo et al 2019 Pt 1 & pt 2). ED2 is also the progenitor of the Functionally Assembled Terrestrial Ecosystem Simulator (FATES), the DGVM coupled with the Energy Exascale Earth System Model (E3SM) (Xu & Christoffersen 2017 ) . In ED2, cohorts are tracked across multiple size-classes or individuals within the same plant functional type (PFT). Each cohort can encounter multiple light environments within a single climatic grid cell depending on patch-level disturbance history and vertical light competition that modulates interactions between plant traits and resource acquisition. Heterogeneity in the light environment and canopy structure across patches within a grid cell gives rise to varying horizontal and vertical micro-environments that differ in temperature, humidity, soil moisture, and soil nutrient conditions (Fisher et al 2018). The energy, water, and carbon dioxide cycles are solved separately for each patch in ED2, while fluxes and storage associated with individual plants are solved for each cohort within patches (Longo et al 2019). As a result, vegetation structure and functional distributions are emergent properties in the model that depend on plant functional traits and their interactions with abiotic environmental conditions. Each plant perceives a unique environment, including incident light, temperature, and vapor pressure deficit that varies across local scales in association with the horizontal and vertical position of each cohort relative to other cohorts, in addition to patch level differences in topographic and edaphic conditions. Coexistence of different vegetation types emerges from different environmental niches, either along a successional gradient of light availability or vertical position in the canopy (Moorcroft et al., 2001; Smith et al., 2001; Purves & Pacala, 2008).
-
-Temperature is an atmospheric boundary condition driving the ED2 model (Longo et al 2019). Each patch in each grid cell is defined by a thermodynamic envelope, comprised of distinct thermodynamic systems for each soil layer, temporary surface water or snow layer, the aboveground component of each cohort, and the canopy air space (Longo et al 2019). The  atmosphere above and outside of the canopy air space is referred to as free air and is determined directly from boundary conditions in ED2. Patches exchange heat and mass with the free air  and lose water and associated energy through surface and sub-surface runoff. The net enthalpy flux of soil, temporary surface water, and vegetation thermodynamic systems in ED2 are exclusively due to associated water fluxes, whereas the eddy flux between the free air and the canopy air space includes both water transport and flux associated with the mixing of air with different temperatures between the canopy air space and free air (Longo et al 2019).
-
-Because most CBMs are spatially implicit within grid cells, direct and diffuse photosynthetically active radiation (PAR) is distributed to cohorts of differing heights using radiative transfer models that depend on designated rules associated with how crown architecture is represented, rather than via direct spatial competition determined by spatially explicit crown locations (Fisher et al. 2010?). The flat-top crown method used in ED and ED2 stacks cohort-layers vertically, and a radiative transfer model is used to determine radiation absorbed by each layer at its midpoint, meaning that each cohort is shaded by all taller cohorts. This is distinct from other models that represent crown architecture using a perfect plasticity approximation (PPA) approach, which assumes that tree crowns completely fill canopy gaps through phototropism (stem leaning) and crown filling (Strigul et al. 2008). Discrete canopy layers are comprised of self-organizing crowns that all receive the same incoming radiation. Once the canopy layer is filled with tree crowns, successive shorter trees inhabit the subsequent understory layer and are shaded by the trees in the canopy (Fisher et al 2010/2018?). Models using the PPA approach differ in number of understory layers (e.g. some only have one) (Fisher et al 2018). Though an improvement over big-leaf models, models that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g., seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g. thermal responses, as we present in this paper). Hence, multi-layered ecosystem models may be necessary for accurately projecting future forest function. (E.g. see de Pury & Farquhar, 1997).
-
+Having established how physical conditions and biological form and function vary across vertical gradients, we now turn attention to the implications of these patterns for our understanding of how forest ecosystems may be impacted by global change, and our ability to project this across space and time.
 
 
 ## Global change responses
@@ -562,7 +540,7 @@ Because most CBMs are spatially implicit within grid cells, direct and diffuse p
 
 - Influence of increasing temperatures on species compositions and feedbacks to future forest microclimates and function?
 
---Variation across horizontal biophysical gradients (climate, soils, etc.)(E.O)
+
 
 *Frequent drought-related hydraulic limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to sensitivity of overstory trees to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Larger trees suffer disproportionally greater hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of soil water enables canopies with suitable foliar traits to remain cool through continuous evapotranspiration even during increasing air temperature, thereby buffering understory microclimates, unless relative humidity is so high as to reduce rate of evapotranspiration [@perezIncreasingHumidityThreatens2018].*
 
@@ -575,9 +553,48 @@ Because most CBMs are spatially implicit within grid cells, direct and diffuse p
  
 ### canopy disturbance
 
+--Variation across horizontal biophysical gradients (climate, soils, etc.)(E.O)
+
+*(there's a lot of literature on canopy disturbance impacts--tap into that in this section)*
+
 Microclimate warming has implications for forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
 increases in mortality of big trees (e.g. @senfCanopyMortalityHas2018a) would increase canopy roughness 
+
+## Scaling across space and time 
+
+*Scaling our understanding across space and time requires remote sensing and models.*
+
+### Remote sensing 
+
+An increasing availability of airborne and spaceborne LiDAR remote sensing data offers a promising opportunity for mapping vertical thermal gradients and vegetation structure. [Drone based FLIR cams, tower thermal cams (Pau et al 2018), ECOSTRESS]. To evaluate large-scale ecosystem patterns, high resolution vertically resolved vegetation structure from LiDAR data can be analyzed in combination with collocated field measurements collected using towers (FluxNet REF), canopy cranes (@nakamuraForestsTheirCanopies2017), or by tree climbing (REF – e.g. Asner papers, Shenkin et al – Unding Jami’s work). Existing research efforts have already revealed incredibly heterogeneity in vegetation structure, diversity, traits, and properties both within and across ecosystems (REFS – Stovall, Schneider, …others).
+
+### Representing Vertical Gradients in Models
+
+Models are needed to predict future ecosystem dynamics, which remain one of the largest sources of uncertainty in Earth System Model (ESM) projections of the future of global carbon cycling and climate change (*Friedlingstein et al. 2006*). 
+Dynamic global vegetation models (DGVMs) comprise the land surface models in ESMs used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). 
+DGVMs operate at a range of scales and have varying degrees of complexity, ranging from detailed individual-based models (*a.k.a.* forest gap models), which represent vegetation at the level of individual plants, capturing spatial variability in the light environment and microclimates at high vertical and horizontal resolution (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato et al. 2007; Shuman et al. 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011), to big-leaf models that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer (Fig. `r fig_model`). 
+This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan et al. 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt et al. 1998; Moorcroft et al., 2001; Smith et al. 2001; Stark et al., 2012). 
+Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015).
+Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output, highlighting the need to identify and parsimoniously represent the most essential drivers of forest ecosystem function. 
+
+![**Figure `r fig_model`. DRAFT. Enrich this by showing 3-4 carefully selected scenarios (e.g., baseline, warming-mesic, warming-drought, canopy disturbance), and maybe a few key processes/ consequences (leaf T, C balance).** [Issue #42](https://github.com/EcoClimLab/vertical-thermal-review/issues/42). ](schematics/model_schematic.png)
+
+**The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.**
+*[how?]*
+
+~~In general, DGVMs range from Individual Based Models (IBMs) on one end of the complexity and scale spectrum to big-leaf models on the other end. Most climate models incorporate vegetation dynamics using big-leaf models, which include many first generation DGVMs that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer. This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan et al. 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt et al. 1998; Moorcroft et al., 2001; Smith et al. 2001; Stark et al., 2012). On the other end of the spectrum are IBMs, also referred to as forest gap models, representing vegetation at the level of individual plants (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato et al. 2007; Shuman et al. 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011). These models are often stochastic and spatially explicit, capturing spatial variability in the light environment and microclimates at high vertical and horizontal resolution. As a result, however, IBMs are computationally expensive and tend to be run at very local scales.~~ 
+
+**The computationally feasible approach to representing vertical structuring in DVGMs lies in Cohort-based models (CBMs), which sit in the middle of this continuum between the oversimplified vegetation dynamics in big-leaf models and the computational expense of individual-based models.** CBMs represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type (Haverd et al., 2013; Hurtt et al., 1998; Lischke et al. 2006; Medvigy et al. 2009; Moorcroft et al., 2001; Scherstjanoi et al. 2014; Smith et al., 2014; Weng et al., 2015). ~~Although this cohort approach serves as a compromise that incurs lower computational costs than IBMs while capturing many of the same dynamics, CBMs do not incorporate the stochastic processes of IBMs that typically allow for greater representation of functional diversity (Fisher et al., 2010).~~ 
+
+*(KAT: I think all of the following content is great, but probably needs to be heavily tightened:)*
+
+To review the vertical light environment and thermodynamics of CBMs in more detail, we focus here on the Ecosystem Demography model version 2 (ED2), a model that is actively undergoing continued development and application across a range of ecosystems and landscapes (Moorcroft et al. 2001, Longo et al 2019 Pt 1 & pt 2). ED2 is also the progenitor of the Functionally Assembled Terrestrial Ecosystem Simulator (FATES), the DGVM coupled with the Energy Exascale Earth System Model (E3SM) (Xu & Christoffersen 2017 ) . In ED2, cohorts are tracked across multiple size-classes or individuals within the same plant functional type (PFT). Each cohort can encounter multiple light environments within a single climatic grid cell depending on patch-level disturbance history and vertical light competition that modulates interactions between plant traits and resource acquisition. Heterogeneity in the light environment and canopy structure across patches within a grid cell gives rise to varying horizontal and vertical micro-environments that differ in temperature, humidity, soil moisture, and soil nutrient conditions (Fisher et al 2018). The energy, water, and carbon dioxide cycles are solved separately for each patch in ED2, while fluxes and storage associated with individual plants are solved for each cohort within patches (Longo et al 2019). As a result, vegetation structure and functional distributions are emergent properties in the model that depend on plant functional traits and their interactions with abiotic environmental conditions. Each plant perceives a unique environment, including incident light, temperature, and vapor pressure deficit that varies across local scales in association with the horizontal and vertical position of each cohort relative to other cohorts, in addition to patch level differences in topographic and edaphic conditions. Coexistence of different vegetation types emerges from different environmental niches, either along a successional gradient of light availability or vertical position in the canopy (Moorcroft et al., 2001; Smith et al., 2001; Purves & Pacala, 2008).
+
+Temperature is an atmospheric boundary condition driving the ED2 model (Longo et al 2019). Each patch in each grid cell is defined by a thermodynamic envelope, comprised of distinct thermodynamic systems for each soil layer, temporary surface water or snow layer, the aboveground component of each cohort, and the canopy air space (Longo et al 2019). The  atmosphere above and outside of the canopy air space is referred to as free air and is determined directly from boundary conditions in ED2. Patches exchange heat and mass with the free air  and lose water and associated energy through surface and sub-surface runoff. The net enthalpy flux of soil, temporary surface water, and vegetation thermodynamic systems in ED2 are exclusively due to associated water fluxes, whereas the eddy flux between the free air and the canopy air space includes both water transport and flux associated with the mixing of air with different temperatures between the canopy air space and free air (Longo et al 2019).
+
+Because most CBMs are spatially implicit within grid cells, direct and diffuse photosynthetically active radiation (PAR) is distributed to cohorts of differing heights using radiative transfer models that depend on designated rules associated with how crown architecture is represented, rather than via direct spatial competition determined by spatially explicit crown locations (Fisher et al. 2010?). The flat-top crown method used in ED and ED2 stacks cohort-layers vertically, and a radiative transfer model is used to determine radiation absorbed by each layer at its midpoint, meaning that each cohort is shaded by all taller cohorts. This is distinct from other models that represent crown architecture using a perfect plasticity approximation (PPA) approach, which assumes that tree crowns completely fill canopy gaps through phototropism (stem leaning) and crown filling (Strigul et al. 2008). Discrete canopy layers are comprised of self-organizing crowns that all receive the same incoming radiation. Once the canopy layer is filled with tree crowns, successive shorter trees inhabit the subsequent understory layer and are shaded by the trees in the canopy (Fisher et al 2010/2018?). Models using the PPA approach differ in number of understory layers (e.g. some only have one) (Fisher et al 2018). Though an improvement over big-leaf models, models that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g., seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g. thermal responses, as we present in this paper). Hence, multi-layered ecosystem models may be necessary for accurately projecting future forest function. (E.g. see de Pury & Farquhar, 1997).
+
 
 ## Conclusions
 
