--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -251,6 +251,7 @@
   url = {http://www.nrcresearchpress.com/doi/10.1139/x06-088},
   urldate = {2020-12-15},
   abstract = {We have characterized overstory light transmission, understory light levels, and plant communities in mixedwood boreal forests of northwestern Quebec with the objective of understanding how overstory light transmission interacts with composition and time since disturbance to influence the diversity and composition of understory vegetation, and, in turn, the further attenuation of light to the forest floor by the understory. Overstory light transmission differed among three forest types (aspen, mixed deciduous–conifer, and old cedar-dominated), with old forests having higher proportions of high light levels than aspen and mixed forests, which were characterized by intermediate light levels. The composition of the understory plant communities in old forests showed the weakest correlation to overstory light transmission, although those forests had the largest range of light transmission. The strongest correlation between characteristics of overstory light transmission and understory communities was found in aspen forests. Species diversity indices were consistently higher in aspen forests but showed weak relationships with overstory light transmission. Light attenuation by the understory vegetation and total height of the understory vegetation were strongly and positively related to overstory light transmission but not forest type. Therefore, light transmission through the overstory influenced the structure and function of understory plants more than their diversity and composition. This is likely due to the strong effect of the upper understory layers, which tend to homogenize light levels at the forest floor regardless of forest type. The understory plant community acts as a filter, thereby reducing light levels at the forest floor to uniformly low levels.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SSJUB59J\\Bartemucci et al. - 2006 - Overstory influences on light attenuation patterns.pdf},
   langid = {english},
   number = {9}
 }
